crates/nuff_python_parser/src/snapshots/nuff_python_parser__string__tests__parse_f_string_concat_4.snap
---
source: crates/nuff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..31,
            value: FString(
                ExprFString {
                    node_index: NodeIndex(None),
                    range: 0..31,
                    value: FStringValue {
                        inner: Concatenated(
                            [
                                Literal(
                                    StringLiteral {
                                        range: 0..8,
                                        node_index: NodeIndex(None),
                                        value: "Hello ",
                                        flags: StringLiteralFlags {
                                            quote_style: Single,
                                            prefix: Empty,
                                            triple_quoted: false,
                                            unclosed: false,
                                        },
                                    },
                                ),
                                FString(
                                    FString {
                                        range: 9..22,
                                        node_index: NodeIndex(None),
                                        elements: [
                                            Literal(
                                                InterpolatedStringLiteralElement {
                                                    range: 11..16,
                                                    node_index: NodeIndex(None),
                                                    value: "world",
                                                },
                                            ),
                                            Interpolation(
                                                InterpolatedElement {
                                                    range: 16..21,
                                                    node_index: NodeIndex(None),
                                                    expression: StringLiteral(
                                                        ExprStringLiteral {
                                                            node_index: NodeIndex(None),
                                                            range: 17..20,
                                                            value: StringLiteralValue {
                                                                inner: Single(
                                                                    StringLiteral {
                                                                        range: 17..20,
                                                                        node_index: NodeIndex(None),
                                                                        value: "!",
                                                                        flags: StringLiteralFlags {
                                                                            quote_style: Double,
                                                                            prefix: Empty,
                                                                            triple_quoted: false,
                                                                            unclosed: false,
                                                                        },
                                                                    },
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: None,
                                                },
                                            ),
                                        ],
                                        flags: FStringFlags {
                                            quote_style: Single,
                                            prefix: Regular,
                                            triple_quoted: false,
                                            unclosed: false,
                                        },
                                    },
                                ),
                                Literal(
                                    StringLiteral {
                                        range: 23..31,
                                        node_index: NodeIndex(None),
                                        value: "again!",
                                        flags: StringLiteralFlags {
                                            quote_style: Single,
                                            prefix: Empty,
                                            triple_quoted: false,
                                            unclosed: false,
                                        },
                                    },
                                ),
                            ],
                        ),
                    },
                },
            ),
        },
    ),
]
